--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,11 +5,11 @@ name: CI.yml
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths-ignore:
       - "**.md"
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths-ignore:
       - "**.md"
   schedule:
